// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./InitialsAvatar.stories AllSizes 1`] = `
<div
  class="MuiStack-root css-1sos3zc-MuiStack-root"
>
  <div
    class="initialsAvatar MuiBox-root css-ksqe1t"
  >
    S
  </div>
  <div
    class="initialsAvatar MuiBox-root css-nmen8c"
  >
    S
  </div>
  <div
    class="initialsAvatar MuiBox-root css-11n5h3k"
  >
    S
  </div>
  <div
    class="initialsAvatar MuiBox-root css-6uhehl"
  >
    S
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Default 1`] = `
<div
  class="initialsAvatar MuiBox-root css-1qgn1pp"
>
  S
</div>
`;

exports[`./InitialsAvatar.stories DifferentNames 1`] = `
<div
  class="MuiStack-root css-1sos3zc-MuiStack-root"
>
  <div
    class="initialsAvatar MuiBox-root css-fjpxmy"
  >
    A
  </div>
  <div
    class="initialsAvatar MuiBox-root css-1ddg8e0"
  >
    B
  </div>
  <div
    class="initialsAvatar MuiBox-root css-1w7946m"
  >
    C
  </div>
  <div
    class="initialsAvatar MuiBox-root css-bzu3o8"
  >
    D
  </div>
  <div
    class="initialsAvatar MuiBox-root css-1lq8kgu"
  >
    E
  </div>
</div>
`;

exports[`./InitialsAvatar.stories Large 1`] = `
<div
  class="initialsAvatar MuiBox-root css-1qgn1pp"
>
  S
</div>
`;

exports[`./InitialsAvatar.stories Medium 1`] = `
<div
  class="initialsAvatar MuiBox-root css-7emiao"
>
  S
</div>
`;

exports[`./InitialsAvatar.stories Rounded 1`] = `
<div
  class="initialsAvatar MuiBox-root css-1r6vwch"
>
  S
</div>
`;

exports[`./InitialsAvatar.stories Small 1`] = `
<div
  class="initialsAvatar MuiBox-root css-1bxo8he"
>
  S
</div>
`;

exports[`./InitialsAvatar.stories XSmall 1`] = `
<div
  class="initialsAvatar MuiBox-root css-13lurrd"
>
  S
</div>
`;
